--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/RecipeDetailPage.xaml
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/RecipeDetailPage.xaml
@@ -15,7 +15,7 @@
 	Foreground="{StaticResource PhoneForegroundBrush}"
 	SupportedOrientations="Portrait" 
     Orientation="Portrait"
-	shell:SystemTray.IsVisible="True" xmlns:my="clr-namespace:AdRotator;assembly=AdRotator">
+	shell:SystemTray.IsVisible="True">
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
             <toolkit:NavigationInTransition.Backward>
@@ -121,11 +121,11 @@
                     </ScrollViewer>
                 </controls:PivotItem>
             </controls:Pivot>
-            <my:AdRotatorControl Name="adRotatorControl1" 
+            <!--<my:AdRotatorControl Name="adRotatorControl1" 
                                  VerticalAlignment="Bottom"
                                  Width="480"
-                                 Height="80"/>
-            <!--<adv:AdControl ApplicationId="88cab8ab-34af-42b3-a44e-aa2c9921169f" AdUnitId="10336862" Height="80" Width="480" VerticalAlignment="Bottom" ErrorOccurred="AdControl_ErrorOccurred" />-->
+                                 Height="80"/>-->
+            <adv:AdControl ApplicationId="88cab8ab-34af-42b3-a44e-aa2c9921169f" AdUnitId="10336862" Height="80" Width="480" VerticalAlignment="Bottom" ErrorOccurred="AdControl_ErrorOccurred" AdRefreshed="AdControl_AdRefreshed" />
             
         </Grid>
 
