--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/MainPage.xaml
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/MainPage.xaml
@@ -5,7 +5,6 @@
 	xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
 	xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
 	xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:adduplex="clr-namespace:AdDuplex;assembly=AdDuplex.WindowsPhone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="800" 
@@ -51,7 +50,7 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <!--Panorama control-->
-        <controls:Panorama Title="{Binding Source={StaticResource LocalizedResx}, Path=LocalizedStrings.AppNameKey}" Name="panorama" Margin="0,0,0,80" SelectionChanged="panorama_SelectionChanged">
+        <controls:Panorama Title="{Binding Source={StaticResource LocalizedResx}, Path=LocalizedStrings.AppNameKey}" Name="panorama" SelectionChanged="panorama_SelectionChanged">
             <controls:Panorama.Background>
                 <ImageBrush ImageSource="PanoramaBackground.png" Opacity="0.5"/>
             </controls:Panorama.Background>
@@ -78,8 +77,8 @@
             </controls:PanoramaItem>
             <controls:PanoramaItem Header="{Binding Source={StaticResource LocalizedResx}, Path=LocalizedStrings.SearchKey}">
                 <Grid>
-                    <ProgressBar IsIndeterminate="True" VerticalAlignment="Top" Visibility="{Binding ProgressVisibility, Mode=OneWay}" />
                     <TextBox x:Name="SearchTextBox" Text="{Binding SearchText, Mode=TwoWay}" InputScope="Search" KeyUp="TextBox_KeyUp" VerticalAlignment="Top" />
+                    <ProgressBar IsIndeterminate="True" VerticalAlignment="Top" Visibility="{Binding ProgressVisibility, Mode=OneWay}" />
                     <ListBox ItemsSource="{Binding FoundRecipes}" 
                     	Margin="0,76,-10,0" 
                     	ItemTemplate="{StaticResource RecipeItemTemplate}" x:Name="SearchListBox" d:LayoutOverrides="Width"/>
@@ -87,12 +86,11 @@
             </controls:PanoramaItem>
         </controls:Panorama>
         <!--<adv:AdControl ApplicationId="test_client" AdUnitId="Image480_80" Height="80" Width="480" VerticalAlignment="Bottom" ErrorOccurred="AdControl_ErrorOccurred" />-->
-        <adduplex:AdControl AppId="74155" Height="80" Width="480" VerticalAlignment="Bottom" />
+        <!--<adduplex:AdControl AppId="74155" Height="80" Width="480" VerticalAlignment="Bottom" />-->
     </Grid>
     <!-- IT IS BUILD IN CODE BEHIND
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" StateChanged="ApplicationBar_StateChanged">
-            
             <shell:ApplicationBarIconButton Text="[T]" IconUri="settings.png" Click="ApplicationBarIconButton_Click" x:Name="configButton" />
             <shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="Buy this App" Click="BuyAppClicked" />
