--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/RecipeDetailPage.xaml
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/RecipeDetailPage.xaml
@@ -4,9 +4,9 @@
 	xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
 	xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
 	xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:adv="clr-namespace:Microsoft.Advertising.Mobile.UI;assembly=Microsoft.Advertising.Mobile.UI" 
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:rotator="clr-namespace:AdRotator;assembly=AdRotator"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
 	x:Class="RecipeHubApp.RecipeDetailPage"
@@ -15,7 +15,7 @@
 	Foreground="{StaticResource PhoneForegroundBrush}"
 	SupportedOrientations="Portrait" 
     Orientation="Portrait"
-	shell:SystemTray.IsVisible="True">
+	shell:SystemTray.IsVisible="True"  >
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
             <toolkit:NavigationInTransition.Backward>
@@ -37,7 +37,7 @@
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
     <!--LayoutRoot is the root grid where all page content is placed-->
-    
+
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <!--Pivot Control-->
         <ProgressBar IsIndeterminate="True" Visibility="{Binding ProgressVisibility, Mode=OneWay}" />
@@ -121,13 +121,17 @@
                     </ScrollViewer>
                 </controls:PivotItem>
             </controls:Pivot>
-            <!--<my:AdRotatorControl Name="adRotatorControl1" 
-                                 VerticalAlignment="Bottom"
-                                 Width="480"
-                                 Height="80"/>-->
-            <adv:AdControl ApplicationId="88cab8ab-34af-42b3-a44e-aa2c9921169f" AdUnitId="10336862" Height="80" Width="480" VerticalAlignment="Bottom" ErrorOccurred="AdControl_ErrorOccurred" AdRefreshed="AdControl_AdRefreshed" />
-            
+            <rotator:AdRotatorControl Name="adRotatorControl1"
+                                      SettingsUrl="http://www.intersysweb.com/conf/defaultAdSettings.xml"
+                                        DefaultSettingsFileUri="/RecipeHubApp;component/defaultAdSettings.xml"
+                                        VerticalAlignment="Bottom"
+                                        SlidingAdDirection="Bottom"
+                                        SlidingAdDisplaySeconds="10"
+                                        SlidingAdHiddenSeconds="5"
+                                        
+                                        Width="480"
+                                        Height="80"  />
+            <!--<adv:AdControl ApplicationId="88cab8ab-34af-42b3-a44e-aa2c9921169f" AdUnitId="10336862" Height="80" Width="480" VerticalAlignment="Bottom" ErrorOccurred="AdControl_ErrorOccurred" AdRefreshed="AdControl_AdRefreshed" />-->
         </Grid>
-
     </Grid>
 </phone:PhoneApplicationPage>
